# cpw-parseargs

./: CMakeLists.txt
cmake/: files_install.cmake
include/: argument.h  comparator.h  cpw_parseargs.h  key.h  parser.h  result.h  separator.h  value.h
src/: CMakeLists.txt  argument.cc  comparator.cc  cpw_parseargs.cc  key.cc  parser.cc  result.cc  separator.cc  value.cc
tests/: test_gen.cc
